# AsioGPRC

./: CMakeLists.txt  InstallTaoJson.cmake  main.cpp
cmake/: FindGRPC.cmake
http_client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  HttpServerDelegateImpl.cpp  HttpServerDelegateImpl.h  MyGRPCServiceDelegateImpl.cpp  MyGRPCServiceDelegateImpl.h  WatchDog.cpp  WatchDog.h  main.cpp
server/grpc_client/: MyGRPCServiceClient.cpp  MyGRPCServiceClient.h
server/grpc_service/: MyGRPCService.cpp  MyGRPCService.h  MyGRPCServiceDelegate.h
server/http_server/: HttpServer.cpp  HttpServer.h  HttpServerDelegate.h
server_protos/: .grpc.pb.cc  .grpc.pb.h  CMakeLists.txt  MyService.grpc.pb.cc  MyService.grpc.pb.h  MyService.pb.cc  MyService.pb.h  MyService.proto
